--- a/DependencyInjectionPrototype.Mvc/DependencyInjectionPrototype.Mvc.csproj
+++ b/DependencyInjectionPrototype.Mvc/DependencyInjectionPrototype.Mvc.csproj
@@ -178,7 +178,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="UnityDependencyResolver.cs" />
+    <Compile Include="IocDependencyResolver.cs" />
     <Compile Include="UnityInjectionContainer.cs" />
     <Compile Include="Models\Class1.cs" />
     <Compile Include="Models\Class2.cs" />
