--- a/DependencyInjectionPrototype/DependencyInjectionPrototype.csproj
+++ b/DependencyInjectionPrototype/DependencyInjectionPrototype.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Class2.cs" />
     <Compile Include="Class3.cs" />
     <Compile Include="GenericManager.cs" />
-    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="UnityBootstrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
