--- a/DependencyInjectionPrototype.Shared/DependencyInjectionPrototype.Shared.csproj
+++ b/DependencyInjectionPrototype.Shared/DependencyInjectionPrototype.Shared.csproj
@@ -70,6 +70,7 @@
     <Compile Include="IIocBootstrapper.cs" />
     <Compile Include="IInjectionContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnityInjectionContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
